# cod8-tickets-ai

./: .env  .env.devel  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh  xxx-send_email.py
.github/workflows/: deploy-app.yaml  main_ticketai-chat.yml
backend/: decorators.py  dependencies.py  main.py  session_state.py
backend/api/api_v1/: routers.py
backend/api/api_v1/endpoints/: generic_endpoints.py  llm_endpoints.py  rag_endpoints.py  search_endpoints.py  session_endpoints.py  system_endpoints.py  tickets_endpoints.py  utils_endpoints.py  workers_endpoints.py
backend/config/: __init__.py  logging_config.py
backend/core/: security.py
backend/helpers/: chat_helpers.py  utils.py
backend/interfaces/: azure_ai_embeddings.py  azure_ai_search.py
backend/schemas/: llm_schemas.py
data/: Bank_Design_Equipment_FY2024.csv
db/: tickets-vector-schema.json
examples/: example-ai_search.py
examples/tickets/: ticket1.json  ticket2.json  ticket3.json  ticket4.json  ticket7.json  ticket8.json
scripts/: uvicron.sh  venv.sh
templates/: index.html
workers/: process_tickets_worker.py
